--- a/.github/workflows/main_apimodelscoring.yml
+++ b/.github/workflows/main_apimodelscoring.yml
@@ -60,4 +60,4 @@ jobs:
         with:
           app-name: 'apimodelscoring'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_034D050B47A14ECD8833AC5D167B9568 }
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_034D050B47A14ECD8833AC5D167B9568 }}
